--- a/modules/adapter/package.json
+++ b/modules/adapter/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "rimraf ./dist && tsc",
-        "start": "node ./dist/main.js"
+        "start": "node ./dist/main.js",
+        "start:dev": "nodemon ./src/main.ts"
     },
     "author": "",
     "license": "ISC",
@@ -24,6 +25,7 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.21",
         "@types/node": "^20.12.2",
+        "nodemon": "^3.1.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.3"
     }
