--- a/modules/distributor/package.json
+++ b/modules/distributor/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "rimraf ./dist && tsc",
-        "start": "node ./dist/main.js"
+        "start": "node ./dist/main.js",
+        "start:dev": "nodemon ./src/main.ts"
     },
     "author": "",
     "license": "ISC",
@@ -21,6 +22,7 @@
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
         "@types/node": "^20.12.3",
+        "nodemon": "^3.1.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.3"
     }
