add infrastructure folder

--- a/modules/adapter/.env.sample
+++ b/modules/adapter/.env.sample
@@ -1,4 +1,9 @@
-PORT=4321
 URL=127.0.0.1
 
-TASK_EXPIRE_TIME=60000
+TASK_EXPIRE_TIME=30000
+
+MONGO_HOST=127.0.0.1
+MONGO_PORT=27017
+MONGO_INITDB_DATABASE=
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
