--- a/modules/adapter/package.json
+++ b/modules/adapter/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "fast-safe-stringify": "^2.1.1",
+        "mongoose": "^8.3.1",
         "rimraf": "^5.0.5",
         "winston": "^3.13.0"
     },
@@ -24,6 +25,7 @@
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.21",
+        "@types/mongoose": "^5.11.97",
         "@types/node": "^20.12.2",
         "nodemon": "^3.1.0",
         "ts-node": "^10.9.2",
