--- a/modules/adapter/package.json
+++ b/modules/adapter/package.json
@@ -19,6 +19,7 @@
         "fast-safe-stringify": "^2.1.1",
         "mongoose": "^8.3.1",
         "rimraf": "^5.0.5",
+        "uuid": "^9.0.1",
         "winston": "^3.13.0"
     },
     "devDependencies": {
@@ -27,6 +28,7 @@
         "@types/express": "^4.17.21",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^20.12.2",
+        "@types/uuid": "^9.0.8",
         "nodemon": "^3.1.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.3"
